--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
 	"jupyter.askForKernelRestart": false,
 	"debug.allowBreakpointsEverywhere": true,
 	"debug.console.closeOnEnd": true,
+	"debug.onTaskErrors": "debugAnyway",
 	"diffEditor.ignoreTrimWhitespace": false,
 	"tabnine.experimentalAutoImports": true,
 	"git.autofetch": true,
@@ -151,24 +152,23 @@
 	"docker.images.sortBy": "Label",
 	"docker.containers.groupBy": "Compose Project Name",
 	"docker.containers.sortBy": "Label",
-	"debug.onTaskErrors": "debugAnyway",
 	"problems.showCurrentInStatus": true,
 	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
-	"javascript.updateImportsOnFileMove.enabled": "always",
-	"typescript.updateImportsOnFileMove.enabled": "always",
 	"javascript.suggest.autoImports": true,
 	"javascript.suggestionActions.enabled": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
 	"typescript.suggest.autoImports": true,
 	"typescript.suggestionActions.enabled": true,
+	"typescript.updateImportsOnFileMove.enabled": "always",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"typescript.tsserver.maxTsServerMemory": 1536,
 	"typescript.tsserver.watchOptions": {},
 	"github.copilot.enable": {
 		"*": true,
 		"yaml": true,
-		"plaintext": false,
 		"markdown": true,
-		"java": true
+		"java": true,
+		"plaintext": false
 	},
 	"[jsonc]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
