--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,24 @@
 {
-	"editor.inlineSuggest.enabled": true,
-	"editor.suggestSelection": "first",
-	"editor.fontFamily": "Fira Code",
-	"editor.fontLigatures": true,
-	"editor.fontSize": 15,
-	"editor.fontWeight": "400",
-	"editor.tabSize": 2,
+	// Workflow
+	"security.workspace.trust.untrustedFiles": "open",
+	"problems.showCurrentInStatus": true,
+	"terminal.integrated.defaultProfile.linux": "zsh",
+	"terminal.integrated.defaultProfile.windows": "Ubuntu-20.04 (WSL)",
+	"http.proxy": "",
+	"http.proxySupport": "off",
+	"http.proxyAuthorization": null,
+	"http.proxyStrictSSL": false,
+	"sync.gist": "31d051020e1fe66435b53f28a0ed30ee",
+	"sync.forceUpload": true,
+	"sync.quietSync": true,
+	"sync.forceDownload": true,
+	"sync.autoUpload": true,
+	"sync.autoDownload": true,
+	// Editor
 	"editor.insertSpaces": false,
+	"editor.tabSize": 2,
 	"editor.formatOnSave": true,
 	"editor.wordWrap": "off",
-	"editor.bracketPairColorization.enabled": true,
-	"editor.guides.bracketPairs": "active",
-	"editor.pasteAs.enabled": false,
-	"editor.pasteAs.showPasteSelector": "never",
-	"editor.stickyScroll.enabled": false,
-	"editor.autoClosingBrackets": "always",
 	"editor.defaultFormatter": "vscode.typescript-language-features",
 	"editor.codeActionsOnSave": {
 		"source.fixAll": "explicit",
@@ -22,42 +26,54 @@
 		"source.removeUnusedImports": "always",
 		"source.removeUnused.ts": "never"
 	},
+	"editor.fontFamily": "Fira Code",
+	"editor.fontSize": 15,
+	"editor.fontWeight": "400",
+	"editor.fontLigatures": true,
+	"editor.bracketPairColorization.enabled": true,
+	"editor.guides.bracketPairs": "active",
+	"editor.inlineSuggest.enabled": true,
+	"editor.suggestSelection": "first",
+	"editor.pasteAs.enabled": false,
+	"editor.pasteAs.showPasteSelector": "never",
+	"editor.stickyScroll.enabled": false,
+	"editor.autoClosingBrackets": "always",
 	"editor.unicodeHighlight.invisibleCharacters": false,
 	"editor.unicodeHighlight.ambiguousCharacters": false,
+	// Workbench
+	"workbench.colorTheme": "Dracula Theme",
+	"workbench.iconTheme": "material-icon-theme",
+	"workbench.productIconTheme": "material-product-icons",
+	"workbench.tree.indent": 15,
+	"workbench.sideBar.location": "left",
+	"workbench.editor.restoreViewState": true,
+	// Editor Tabs
 	"explorer.autoReveal": true,
 	"explorer.confirmDragAndDrop": false,
 	"scm.defaultViewMode": "tree",
 	"scm.showHistoryGraph": false,
-	"workbench.productIconTheme": "material-product-icons",
-	"workbench.sideBar.location": "left",
-	"workbench.tree.indent": 15,
-	"workbench.colorTheme": "Dracula Theme",
-	"workbench.iconTheme": "material-icon-theme",
-	"workbench.editor.restoreViewState": true,
-	"terminal.integrated.defaultProfile.linux": "zsh",
-	"terminal.integrated.defaultProfile.windows": "Ubuntu-20.04 (WSL)",
-	"security.workspace.trust.untrustedFiles": "open",
+	// Git
+	"git.autofetch": true,
+	"git.enableSmartCommit": true,
+	"git.openRepositoryInParentFolders": "always",
+	// Debug
+	"debug.allowBreakpointsEverywhere": true,
+	"debug.console.closeOnEnd": true,
+	"debug.onTaskErrors": "debugAnyway",
+	// Extensions
 	"extensions.closeExtensionDetailsOnViewChange": false,
 	"extensions.ignoreRecommendations": true,
-	"sync.gist": "31d051020e1fe66435b53f28a0ed30ee",
-	"sync.forceUpload": true,
-	"sync.quietSync": true,
-	"sync.forceDownload": true,
-	"sync.autoUpload": true,
-	"sync.autoDownload": true,
-	"bracket-pair-colorizer-2.depreciation-notice": false,
-	"bookmarks.saveBookmarksInProject": true,
-	"powermode.enabled": true,
-	"powermode.presets": "flames",
-	"powermode.combo.location": "editor",
-	"powermode.shake.enabled": false,
 	"material-icon-theme.activeIconPack": "nest",
 	"vsicons.presets.nestjs": true,
 	"vsicons.presets.angular": true,
 	"vsicons.presets.tsOfficial": true,
 	"vsicons.presets.jsOfficial": true,
-	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-	"vsintellicode.features.python.deepLearning": "enabled",
+	"bookmarks.saveBookmarksInProject": true,
+	"powermode.enabled": true,
+	"powermode.presets": "flames",
+	"powermode.combo.location": "editor",
+	"powermode.shake.enabled": false,
+	"bracket-pair-colorizer-2.depreciation-notice": false,
 	"editorconfig.generateAuto": true,
 	"editorconfig.template": "default",
 	"eslint.format.enable": true,
@@ -67,6 +83,9 @@
 		"typescript",
 		"typescriptreact"
 	],
+	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+	"vsintellicode.features.python.deepLearning": "enabled",
+	"tabnine.experimentalAutoImports": true,
 	"C_Cpp.errorSquiggles": "disabled",
 	"C_Cpp.dimInactiveRegions": true,
 	"C_Cpp.inactiveRegionOpacity": 0.55,
@@ -83,14 +102,7 @@
 	],
 	"jupyter.alwaysTrustNotebooks": true,
 	"jupyter.askForKernelRestart": false,
-	"debug.allowBreakpointsEverywhere": true,
-	"debug.console.closeOnEnd": true,
-	"debug.onTaskErrors": "debugAnyway",
 	"diffEditor.ignoreTrimWhitespace": false,
-	"tabnine.experimentalAutoImports": true,
-	"git.autofetch": true,
-	"git.enableSmartCommit": true,
-	"git.openRepositoryInParentFolders": "always",
 	"git-graph.repository.commits.fetchAvatars": true,
 	"gitlens.defaultDateFormat": null,
 	"gitlens.views.remotes.branches.layout": "list",
@@ -155,7 +167,6 @@
 	"docker.images.sortBy": "Label",
 	"docker.containers.groupBy": "Compose Project Name",
 	"docker.containers.sortBy": "Label",
-	"problems.showCurrentInStatus": true,
 	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
 	"javascript.suggest.autoImports": true,
 	"javascript.suggestionActions.enabled": true,
@@ -173,6 +184,21 @@
 		"java": true,
 		"plaintext": false
 	},
+	"json.schemas": [
+		{
+			"fileMatch": [
+				"/package.json"
+			],
+			"url": "https://json.schemastore.org/package",
+			"schema": true
+		}
+	],
+	"[html]": {
+		"editor.defaultFormatter": "vscode.html-language-features"
+	},
+	"[css]": {
+		"editor.defaultFormatter": "vscode.css-language-features"
+	},
 	"[jsonc]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
@@ -180,7 +206,7 @@
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[java]": {
-		"editor.defaultFormatter": "redhat.java"
+		"editor.defaultFormatter": "vscjava.vscode-java-pack"
 	},
 	"[dockercompose]": {
 		"editor.defaultFormatter": "ms-azuretools.vscode-docker"
@@ -188,7 +214,7 @@
 	"[python]": {
 		"editor.formatOnType": true
 	},
-	"python.defaultInterpreterPath": "/home/alvaro/.asdf/shims/python3.10",
+	"python.defaultInterpreterPath": "/home/alvaro/.asdf/shims/python3",
 	"python.terminal.launchArgs": [],
 	"python.analysis.typeCheckingMode": "basic",
 	"python.showStartPage": false,
@@ -376,18 +402,5 @@
 		"*.dbml": "dbml",
 		"**/CODEOWNERS": "markdown",
 		"*.rmd": "markdown"
-	},
-	"json.schemas": [
-		{
-			"fileMatch": [
-				"/package.json"
-			],
-			"url": "https://json.schemastore.org/package",
-			"schema": true
-		}
-	],
-	"http.proxy": "",
-	"http.proxySupport": "off",
-	"http.proxyAuthorization": null,
-	"http.proxyStrictSSL": false
+	}
 }
