--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -33,6 +33,7 @@
 		"mikestead.dotenv",
 		"kdarkhan.mips",
 		"puorc.awesome-vhdl",
+		"mathematic.vscode-latex",
 		// Git and Docker Tools
 		"mhutchie.git-graph",
 		"eamodio.gitlens",
