chore: update VS Code settings with new themes, command center, and container configurations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
 	"workbench.sideBar.location": "left",
 	"workbench.activityBar.orientation": "vertical",
 	"window.customTitleBarVisibility": "auto",
+	"window.commandCenter": true,
 	// Editor Tabs
 	"editor.minimap.enabled": true,
 	"explorer.autoReveal": true,
@@ -76,6 +77,12 @@
 	"containers.containers.sortBy": "Label",
 	"containers.images.groupBy": "RepositoryName",
 	"containers.images.sortBy": "Label",
+	"docker.commands.composeUpSubset": [
+		{
+			"label": "Compose Up",
+			"template": "${composeCommand} ${profileList} ${configurationFile} up ${detached} ${build} ${serviceList}"
+		}
+	],
 	"material-icon-theme.activeIconPack": "nest",
 	"vsicons.presets.nestjs": true,
 	"vsicons.presets.angular": true,
