--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 	"terminal.integrated.suggest.enabled": false,
 	"chat.commandCenter.enabled": true,
 	"chat.agentSessionsViewLocation": "disabled",
+	"chat.viewSessions.orientation": "stacked",
+	"chat.viewSessions.enabled": false,
 	"http.proxy": "",
 	"http.proxySupport": "off",
 	"http.proxyAuthorization": null,
@@ -58,6 +60,7 @@
 	"workbench.tree.indent": 15,
 	"workbench.sideBar.location": "left",
 	"workbench.activityBar.orientation": "vertical",
+	"workbench.secondarySideBar.defaultVisibility": "hidden",
 	"workbench.editorAssociations": {
 		"*.copilotmd": "vscode.markdown.preview.editor",
 		"*.pdf": "latex-workshop-pdf-hook"
